--- a/index.html
+++ b/index.html
@@ -10,90 +10,104 @@
       font-family: 'Arial', sans-serif;
       margin: 0;
       padding: 0;
-      background: linear-gradient(135deg, #f5f7fa, #c3cfe2); /* Gradient background */
+      background: #e2f3f5;
       color: #333;
       height: 100vh;
+      overflow-x: hidden;
       transition: background 0.3s ease;
     }
 
-    /* Container Styles */
+    /* Header Styles */
+    header {
+      background-color: #2C3E50;
+      color: white;
+      padding: 20px 0;
+      text-align: center;
+      font-size: 30px;
+      letter-spacing: 1.5px;
+      border-radius: 0 0 15px 15px;
+      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+      margin-bottom: 20px;
+    }
+
+    header button {
+      background-color: #16a085;
+      color: white;
+      border: none;
+      padding: 10px 20px;
+      border-radius: 25px;
+      font-size: 16px;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
+    }
+
+    header button:hover {
+      background-color: #1abc9c;
+    }
+
+    /* Main Container */
     .container {
       width: 90%;
       max-width: 1200px;
       margin: 0 auto;
-      padding: 30px;
-      background-color: rgba(255, 255, 255, 0.8); /* Light transparent white */
+      padding: 40px;
+      background-color: white;
       border-radius: 12px;
-      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
-      margin-top: 30px;
+      box-shadow: 0 10px 40px rgba(0, 0, 0, 0.1);
       transition: all 0.3s ease;
     }
 
-    header {
-      background-color: #4CAF50;
-      color: white;
-      padding: 20px;
-      text-align: center;
-      border-radius: 12px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
-    }
-
-    /* Button Styles */
-    button {
-      background-color: #4CAF50;
-      color: white;
-      padding: 12px 25px;
-      border: none;
-      cursor: pointer;
-      border-radius: 8px;
-      font-size: 16px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    }
-
-    button:hover {
-      background-color: #45a049;
-    }
-
-    .dark-mode button {
-      background-color: #5c6bc0;
-    }
-
-    .dark-mode button:hover {
-      background-color: #3f51b5;
-    }
-
     /* Form Styles */
+    #tradeForm {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 20px;
+      margin-bottom: 40px;
+    }
+
     #tradeForm input,
     #tradeForm select,
     #tradeForm textarea {
       width: 100%;
       padding: 15px;
-      margin: 10px 0;
       border-radius: 8px;
-      border: 2px solid #ddd;
-      box-sizing: border-box;
+      border: 1px solid #ccc;
       font-size: 16px;
       background-color: #f9f9f9;
-      transition: all 0.3s ease;
+      transition: border-color 0.3s ease, background-color 0.3s ease;
     }
 
     #tradeForm input:focus,
     #tradeForm select:focus,
     #tradeForm textarea:focus {
-      border-color: #4CAF50;
+      border-color: #1abc9c;
       outline: none;
       background-color: #fff;
+    }
+
+    /* Button Styles */
+    button {
+      background-color: #2C3E50;
+      color: white;
+      padding: 12px 25px;
+      border-radius: 25px;
+      font-size: 16px;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
+      border: none;
+    }
+
+    button:hover {
+      background-color: #34495E;
     }
 
     /* Table Styles */
     .trade-history table {
       width: 100%;
-      margin-top: 20px;
+      margin-top: 30px;
       border-collapse: collapse;
-      background-color: #fff;
-      border-radius: 12px;
+      border-radius: 8px;
       overflow: hidden;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
     }
 
     .trade-history th,
@@ -104,7 +118,7 @@
     }
 
     .trade-history th {
-      background-color: #4CAF50;
+      background-color: #2C3E50;
       color: white;
       font-size: 18px;
     }
@@ -114,48 +128,53 @@
     }
 
     .trade-history tr:hover {
-      background-color: #e2f0d9;
+      background-color: #e0e0e0;
       cursor: pointer;
     }
 
-    /* Dark Mode Styling */
+    /* Dark Mode */
     .dark-mode {
-      background-color: #333;
-      color: #fff;
+      background-color: #2C3E50;
+      color: #ecf0f1;
     }
 
     .dark-mode .container {
-      background-color: rgba(0, 0, 0, 0.8);
+      background-color: #34495E;
     }
 
     .dark-mode header {
-      background-color: #333;
+      background-color: #2C3E50;
     }
 
     .dark-mode #tradeForm input,
     .dark-mode #tradeForm select,
     .dark-mode #tradeForm textarea {
-      background-color: #444;
-      color: #fff;
-      border-color: #666;
+      background-color: #2c3e50;
+      color: #ecf0f1;
+      border: 1px solid #34495E;
     }
 
     .dark-mode .trade-history {
-      background-color: #444;
+      background-color: #34495E;
     }
 
     .dark-mode .trade-history th,
     .dark-mode .trade-history td {
-      color: #fff;
+      color: #ecf0f1;
     }
 
     /* Stats Section */
     #tradeStats {
       margin-top: 30px;
-      padding: 25px;
+      padding: 30px;
       background-color: rgba(255, 255, 255, 0.9);
       border-radius: 12px;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+    }
+
+    #tradeStats p {
+      font-size: 18px;
+      margin-bottom: 10px;
     }
 
     /* Mobile Responsiveness */
@@ -163,6 +182,12 @@
       .container {
         width: 100%;
         padding: 20px;
+      }
+
+      #tradeForm input,
+      #tradeForm select,
+      #tradeForm textarea {
+        width: 100%;
       }
 
       button {
@@ -180,40 +205,58 @@
 
   <div class="container">
     <form id="tradeForm">
-      <label for="date">Date & Time:</label>
-      <input type="datetime-local" id="date" required><br>
+      <div>
+        <label for="date">Date & Time:</label>
+        <input type="datetime-local" id="date" required><br>
+      </div>
 
-      <label for="instrument">Instrument/Asset:</label>
-      <select id="instrument" required>
-        <option value="EUR/USD">EUR/USD (Forex)</option>
-        <option value="BTC/USD">BTC/USD (Crypto)</option>
-        <option value="AAPL">AAPL (Stock)</option>
-        <option value="GOLD">GOLD (Commodity)</option>
-      </select><br>
+      <div>
+        <label for="instrument">Instrument/Asset:</label>
+        <select id="instrument" required>
+          <option value="EUR/USD">EUR/USD (Forex)</option>
+          <option value="BTC/USD">BTC/USD (Crypto)</option>
+          <option value="AAPL">AAPL (Stock)</option>
+          <option value="GOLD">GOLD (Commodity)</option>
+        </select><br>
+      </div>
 
-      <label for="setup">Setup Type:</label>
-      <select id="setup" required>
-        <option value="Technical">Technical</option>
-        <option value="Fundamental">Fundamental</option>
-      </select><br>
+      <div>
+        <label for="setup">Setup Type:</label>
+        <select id="setup" required>
+          <option value="Technical">Technical</option>
+          <option value="Fundamental">Fundamental</option>
+        </select><br>
+      </div>
 
-      <label for="entryExit">Entry/Exit Points:</label>
-      <input type="text" id="entryExit" required><br>
+      <div>
+        <label for="entryExit">Entry/Exit Points:</label>
+        <input type="text" id="entryExit" required><br>
+      </div>
 
-      <label for="size">Position Size:</label>
-      <input type="number" id="size" required><br>
+      <div>
+        <label for="size">Position Size:</label>
+        <input type="number" id="size" required><br>
+      </div>
 
-      <label for="stopLoss">Stop Loss & Target:</label>
-      <input type="text" id="stopLoss" required><br>
+      <div>
+        <label for="stopLoss">Stop Loss & Target:</label>
+        <input type="text" id="stopLoss" required><br>
+      </div>
 
-      <label for="reason">Reason for Trade:</label>
-      <textarea id="reason" required></textarea><br>
+      <div>
+        <label for="reason">Reason for Trade:</label>
+        <textarea id="reason" required></textarea><br>
+      </div>
 
-      <label for="emotion">Emotion Before/During/After:</label>
-      <textarea id="emotion" required></textarea><br>
+      <div>
+        <label for="emotion">Emotion Before/During/After:</label>
+        <textarea id="emotion" required></textarea><br>
+      </div>
 
-      <label for="analysis">Post-Trade Analysis (What went right/wrong):</label>
-      <textarea id="analysis" required></textarea><br>
+      <div>
+        <label for="analysis">Post-Trade Analysis (What went right/wrong):</label>
+        <textarea id="analysis" required></textarea><br>
+      </div>
 
       <button type="submit">Save Trade</button>
     </form>
@@ -315,5 +358,6 @@
       document.getElementById('avgSize').textContent = 'N/A';
     }
   </script>
+
 </body>
 </html>
